content/registry/packages/google-native/api-docs/dialogflow/v3/getentitytype/_index.md

---
title: "getEntityType"
title_tag: "google-native.dialogflow/v3.getEntityType"
meta_desc: "Documentation for the google-native.dialogflow/v3.getEntityType function with examples, input properties, output properties, and supporting types."
aliases:
    - "/docs/reference/pkg///"
layout: api-doc-resource
---



<!-- WARNING: this file was generated by Pulumi Docs Generator. -->
<!-- Do not edit by hand unless you're certain you know what you are doing! -->

Retrieves the specified entity type.




## Using getEntityType {#using}

{{< chooser language "typescript,python,go,csharp" / >}}


{{% choosable language nodejs %}}
<div class="highlight"><pre class="chroma"><code class="language-typescript" data-lang="typescript"><span class="k">function </span>getEntityType<span class="p">(</span><span class="nx">args</span><span class="p">:</span> <span class="nx">GetEntityTypeArgs</span><span class="p">,</span> <span class="nx">opts</span><span class="p">?:</span> <span class="nx"><a href="/docs/reference/pkg/nodejs/pulumi/pulumi/#InvokeOptions">InvokeOptions</a></span><span class="p">): Promise&lt;<span class="nx"><a href="#result">GetEntityTypeResult</a></span>></span></code></pre></div>
{{% /choosable %}}


{{% choosable language python %}}
<div class="highlight"><pre class="chroma"><code class="language-python" data-lang="python"><span class="k">def </span>get_entity_type(</span><span class="nx">agent_id</span><span class="p">:</span> <span class="nx">Optional[str]</span> = None<span class="p">,</span>
                    <span class="nx">entity_type_id</span><span class="p">:</span> <span class="nx">Optional[str]</span> = None<span class="p">,</span>
                    <span class="nx">language_code</span><span class="p">:</span> <span class="nx">Optional[str]</span> = None<span class="p">,</span>
                    <span class="nx">location</span><span class="p">:</span> <span class="nx">Optional[str]</span> = None<span class="p">,</span>
                    <span class="nx">project</span><span class="p">:</span> <span class="nx">Optional[str]</span> = None<span class="p">,</span>
                    <span class="nx">opts</span><span class="p">:</span> <span class="nx"><a href="/docs/reference/pkg/python/pulumi/#pulumi.InvokeOptions">Optional[InvokeOptions]</a></span> = None<span class="p">) -&gt;</span> GetEntityTypeResult</code></pre></div>
{{% /choosable %}}


{{% choosable language go %}}
<div class="highlight"><pre class="chroma"><code class="language-go" data-lang="go"><span class="k">func </span>LookupEntityType<span class="p">(</span><span class="nx">ctx</span><span class="p"> *</span><span class="nx"><a href="https://pkg.go.dev/github.com/pulumi/pulumi/sdk/v3/go/pulumi?tab=doc#Context">Context</a></span><span class="p">,</span> <span class="nx">args</span><span class="p"> *</span><span class="nx">LookupEntityTypeArgs</span><span class="p">,</span> <span class="nx">opts</span><span class="p"> ...</span><span class="nx"><a href="https://pkg.go.dev/github.com/pulumi/pulumi/sdk/v3/go/pulumi?tab=doc#InvokeOption">InvokeOption</a></span><span class="p">) (*<span class="nx"><a href="#result">LookupEntityTypeResult</a></span>, error)</span></code></pre></div>

> Note: This function is named `LookupEntityType` in the Go SDK.

{{% /choosable %}}


{{% choosable language csharp %}}
<div class="highlight"><pre class="chroma"><code class="language-csharp" data-lang="csharp"><span class="k">public static class </span><span class="nx">GetEntityType </span><span class="p">{</span><span class="k">
    public static </span>Task&lt;<span class="nx"><a href="#result">GetEntityTypeResult</a></span>> <span class="p">InvokeAsync(</span><span class="nx">GetEntityTypeArgs</span><span class="p"> </span><span class="nx">args<span class="p">,</span> <span class="nx"><a href="/docs/reference/pkg/dotnet/Pulumi/Pulumi.InvokeOptions.html">InvokeOptions</a></span><span class="p">? </span><span class="nx">opts = null<span class="p">)</span><span class="p">
}</span></code></pre></div>
{{% /choosable %}}



The following arguments are supported:


{{% choosable language csharp %}}
<dl class="resources-properties"><dt class="property-required"
            title="Required">
        <span id="agentid_csharp">
<a href="#agentid_csharp" style="color: inherit; text-decoration: inherit;">Agent<wbr>Id</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}{{% /md %}}</dd><dt class="property-required"
            title="Required">
        <span id="entitytypeid_csharp">
<a href="#entitytypeid_csharp" style="color: inherit; text-decoration: inherit;">Entity<wbr>Type<wbr>Id</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}{{% /md %}}</dd><dt class="property-required"
            title="Required">
        <span id="location_csharp">
<a href="#location_csharp" style="color: inherit; text-decoration: inherit;">Location</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}{{% /md %}}</dd><dt class="property-optional"
            title="Optional">
        <span id="languagecode_csharp">
<a href="#languagecode_csharp" style="color: inherit; text-decoration: inherit;">Language<wbr>Code</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}{{% /md %}}</dd><dt class="property-optional"
            title="Optional">
        <span id="project_csharp">
<a href="#project_csharp" style="color: inherit; text-decoration: inherit;">Project</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}{{% /md %}}</dd></dl>
{{% /choosable %}}

{{% choosable language go %}}
<dl class="resources-properties"><dt class="property-required"
            title="Required">
        <span id="agentid_go">
<a href="#agentid_go" style="color: inherit; text-decoration: inherit;">Agent<wbr>Id</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}{{% /md %}}</dd><dt class="property-required"
            title="Required">
        <span id="entitytypeid_go">
<a href="#entitytypeid_go" style="color: inherit; text-decoration: inherit;">Entity<wbr>Type<wbr>Id</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}{{% /md %}}</dd><dt class="property-required"
            title="Required">
        <span id="location_go">
<a href="#location_go" style="color: inherit; text-decoration: inherit;">Location</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}{{% /md %}}</dd><dt class="property-optional"
            title="Optional">
        <span id="languagecode_go">
<a href="#languagecode_go" style="color: inherit; text-decoration: inherit;">Language<wbr>Code</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}{{% /md %}}</dd><dt class="property-optional"
            title="Optional">
        <span id="project_go">
<a href="#project_go" style="color: inherit; text-decoration: inherit;">Project</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}{{% /md %}}</dd></dl>
{{% /choosable %}}

{{% choosable language nodejs %}}
<dl class="resources-properties"><dt class="property-required"
            title="Required">
        <span id="agentid_nodejs">
<a href="#agentid_nodejs" style="color: inherit; text-decoration: inherit;">agent<wbr>Id</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}{{% /md %}}</dd><dt class="property-required"
            title="Required">
        <span id="entitytypeid_nodejs">
<a href="#entitytypeid_nodejs" style="color: inherit; text-decoration: inherit;">entity<wbr>Type<wbr>Id</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}{{% /md %}}</dd><dt class="property-required"
            title="Required">
        <span id="location_nodejs">
<a href="#location_nodejs" style="color: inherit; text-decoration: inherit;">location</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}{{% /md %}}</dd><dt class="property-optional"
            title="Optional">
        <span id="languagecode_nodejs">
<a href="#languagecode_nodejs" style="color: inherit; text-decoration: inherit;">language<wbr>Code</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}{{% /md %}}</dd><dt class="property-optional"
            title="Optional">
        <span id="project_nodejs">
<a href="#project_nodejs" style="color: inherit; text-decoration: inherit;">project</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}{{% /md %}}</dd></dl>
{{% /choosable %}}

{{% choosable language python %}}
<dl class="resources-properties"><dt class="property-required"
            title="Required">
        <span id="agent_id_python">
<a href="#agent_id_python" style="color: inherit; text-decoration: inherit;">agent_<wbr>id</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">str</span>
    </dt>
    <dd>{{% md %}}{{% /md %}}</dd><dt class="property-required"
            title="Required">
        <span id="entity_type_id_python">
<a href="#entity_type_id_python" style="color: inherit; text-decoration: inherit;">entity_<wbr>type_<wbr>id</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">str</span>
    </dt>
    <dd>{{% md %}}{{% /md %}}</dd><dt class="property-required"
            title="Required">
        <span id="location_python">
<a href="#location_python" style="color: inherit; text-decoration: inherit;">location</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">str</span>
    </dt>
    <dd>{{% md %}}{{% /md %}}</dd><dt class="property-optional"
            title="Optional">
        <span id="language_code_python">
<a href="#language_code_python" style="color: inherit; text-decoration: inherit;">language_<wbr>code</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">str</span>
    </dt>
    <dd>{{% md %}}{{% /md %}}</dd><dt class="property-optional"
            title="Optional">
        <span id="project_python">
<a href="#project_python" style="color: inherit; text-decoration: inherit;">project</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">str</span>
    </dt>
    <dd>{{% md %}}{{% /md %}}</dd></dl>
{{% /choosable %}}




## getEntityType Result {#result}

The following output properties are available:



{{% choosable language csharp %}}
<dl class="resources-properties"><dt class="property-"
            title="">
        <span id="autoexpansionmode_csharp">
<a href="#autoexpansionmode_csharp" style="color: inherit; text-decoration: inherit;">Auto<wbr>Expansion<wbr>Mode</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}Indicates whether the entity type can be automatically expanded.{{% /md %}}</dd><dt class="property-"
            title="">
        <span id="displayname_csharp">
<a href="#displayname_csharp" style="color: inherit; text-decoration: inherit;">Display<wbr>Name</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}The human-readable name of the entity type, unique within the agent.{{% /md %}}</dd><dt class="property-"
            title="">
        <span id="enablefuzzyextraction_csharp">
<a href="#enablefuzzyextraction_csharp" style="color: inherit; text-decoration: inherit;">Enable<wbr>Fuzzy<wbr>Extraction</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">bool</span>
    </dt>
    <dd>{{% md %}}Enables fuzzy entity extraction during classification.{{% /md %}}</dd><dt class="property-"
            title="">
        <span id="entities_csharp">
<a href="#entities_csharp" style="color: inherit; text-decoration: inherit;">Entities</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type"><a href="#googleclouddialogflowcxv3entitytypeentityresponse">List&lt;Pulumi.<wbr>Google<wbr>Native.<wbr>Dialogflow.<wbr>V3.<wbr>Outputs.<wbr>Google<wbr>Cloud<wbr>Dialogflow<wbr>Cx<wbr>V3Entity<wbr>Type<wbr>Entity<wbr>Response&gt;</a></span>
    </dt>
    <dd>{{% md %}}The collection of entity entries associated with the entity type.{{% /md %}}</dd><dt class="property-"
            title="">
        <span id="excludedphrases_csharp">
<a href="#excludedphrases_csharp" style="color: inherit; text-decoration: inherit;">Excluded<wbr>Phrases</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type"><a href="#googleclouddialogflowcxv3entitytypeexcludedphraseresponse">List&lt;Pulumi.<wbr>Google<wbr>Native.<wbr>Dialogflow.<wbr>V3.<wbr>Outputs.<wbr>Google<wbr>Cloud<wbr>Dialogflow<wbr>Cx<wbr>V3Entity<wbr>Type<wbr>Excluded<wbr>Phrase<wbr>Response&gt;</a></span>
    </dt>
    <dd>{{% md %}}Collection of exceptional words and phrases that shouldn't be matched. For example, if you have a size entity type with entry `giant`(an adjective), you might consider adding `giants`(a noun) as an exclusion. If the kind of entity type is `KIND_MAP`, then the phrases specified by entities and excluded phrases should be mutually exclusive.{{% /md %}}</dd><dt class="property-"
            title="">
        <span id="kind_csharp">
<a href="#kind_csharp" style="color: inherit; text-decoration: inherit;">Kind</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}Indicates the kind of entity type.{{% /md %}}</dd><dt class="property-"
            title="">
        <span id="name_csharp">
<a href="#name_csharp" style="color: inherit; text-decoration: inherit;">Name</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}The unique identifier of the entity type. Required for EntityTypes.UpdateEntityType. Format: `projects//locations//agents//entityTypes/`.{{% /md %}}</dd><dt class="property-"
            title="">
        <span id="redact_csharp">
<a href="#redact_csharp" style="color: inherit; text-decoration: inherit;">Redact</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">bool</span>
    </dt>
    <dd>{{% md %}}Indicates whether parameters of the entity type should be redacted in log. If redaction is enabled, page parameters and intent parameters referring to the entity type will be replaced by parameter name when logging.{{% /md %}}</dd></dl>
{{% /choosable %}}

{{% choosable language go %}}
<dl class="resources-properties"><dt class="property-"
            title="">
        <span id="autoexpansionmode_go">
<a href="#autoexpansionmode_go" style="color: inherit; text-decoration: inherit;">Auto<wbr>Expansion<wbr>Mode</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}Indicates whether the entity type can be automatically expanded.{{% /md %}}</dd><dt class="property-"
            title="">
        <span id="displayname_go">
<a href="#displayname_go" style="color: inherit; text-decoration: inherit;">Display<wbr>Name</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}The human-readable name of the entity type, unique within the agent.{{% /md %}}</dd><dt class="property-"
            title="">
        <span id="enablefuzzyextraction_go">
<a href="#enablefuzzyextraction_go" style="color: inherit; text-decoration: inherit;">Enable<wbr>Fuzzy<wbr>Extraction</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">bool</span>
    </dt>
    <dd>{{% md %}}Enables fuzzy entity extraction during classification.{{% /md %}}</dd><dt class="property-"
            title="">
        <span id="entities_go">
<a href="#entities_go" style="color: inherit; text-decoration: inherit;">Entities</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type"><a href="#googleclouddialogflowcxv3entitytypeentityresponse">[]Google<wbr>Cloud<wbr>Dialogflow<wbr>Cx<wbr>V3Entity<wbr>Type<wbr>Entity<wbr>Response</a></span>
    </dt>
    <dd>{{% md %}}The collection of entity entries associated with the entity type.{{% /md %}}</dd><dt class="property-"
            title="">
        <span id="excludedphrases_go">
<a href="#excludedphrases_go" style="color: inherit; text-decoration: inherit;">Excluded<wbr>Phrases</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type"><a href="#googleclouddialogflowcxv3entitytypeexcludedphraseresponse">[]Google<wbr>Cloud<wbr>Dialogflow<wbr>Cx<wbr>V3Entity<wbr>Type<wbr>Excluded<wbr>Phrase<wbr>Response</a></span>
    </dt>
    <dd>{{% md %}}Collection of exceptional words and phrases that shouldn't be matched. For example, if you have a size entity type with entry `giant`(an adjective), you might consider adding `giants`(a noun) as an exclusion. If the kind of entity type is `KIND_MAP`, then the phrases specified by entities and excluded phrases should be mutually exclusive.{{% /md %}}</dd><dt class="property-"
            title="">
        <span id="kind_go">
<a href="#kind_go" style="color: inherit; text-decoration: inherit;">Kind</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}Indicates the kind of entity type.{{% /md %}}</dd><dt class="property-"
            title="">
        <span id="name_go">
<a href="#name_go" style="color: inherit; text-decoration: inherit;">Name</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}The unique identifier of the entity type. Required for EntityTypes.UpdateEntityType. Format: `projects//locations//agents//entityTypes/`.{{% /md %}}</dd><dt class="property-"
            title="">
        <span id="redact_go">
<a href="#redact_go" style="color: inherit; text-decoration: inherit;">Redact</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">bool</span>
    </dt>
    <dd>{{% md %}}Indicates whether parameters of the entity type should be redacted in log. If redaction is enabled, page parameters and intent parameters referring to the entity type will be replaced by parameter name when logging.{{% /md %}}</dd></dl>
{{% /choosable %}}

{{% choosable language nodejs %}}
<dl class="resources-properties"><dt class="property-"
            title="">
        <span id="autoexpansionmode_nodejs">
<a href="#autoexpansionmode_nodejs" style="color: inherit; text-decoration: inherit;">auto<wbr>Expansion<wbr>Mode</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}Indicates whether the entity type can be automatically expanded.{{% /md %}}</dd><dt class="property-"
            title="">
        <span id="displayname_nodejs">
<a href="#displayname_nodejs" style="color: inherit; text-decoration: inherit;">display<wbr>Name</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}The human-readable name of the entity type, unique within the agent.{{% /md %}}</dd><dt class="property-"
            title="">
        <span id="enablefuzzyextraction_nodejs">
<a href="#enablefuzzyextraction_nodejs" style="color: inherit; text-decoration: inherit;">enable<wbr>Fuzzy<wbr>Extraction</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">boolean</span>
    </dt>
    <dd>{{% md %}}Enables fuzzy entity extraction during classification.{{% /md %}}</dd><dt class="property-"
            title="">
        <span id="entities_nodejs">
<a href="#entities_nodejs" style="color: inherit; text-decoration: inherit;">entities</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type"><a href="#googleclouddialogflowcxv3entitytypeentityresponse">Google<wbr>Cloud<wbr>Dialogflow<wbr>Cx<wbr>V3Entity<wbr>Type<wbr>Entity<wbr>Response[]</a></span>
    </dt>
    <dd>{{% md %}}The collection of entity entries associated with the entity type.{{% /md %}}</dd><dt class="property-"
            title="">
        <span id="excludedphrases_nodejs">
<a href="#excludedphrases_nodejs" style="color: inherit; text-decoration: inherit;">excluded<wbr>Phrases</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type"><a href="#googleclouddialogflowcxv3entitytypeexcludedphraseresponse">Google<wbr>Cloud<wbr>Dialogflow<wbr>Cx<wbr>V3Entity<wbr>Type<wbr>Excluded<wbr>Phrase<wbr>Response[]</a></span>
    </dt>
    <dd>{{% md %}}Collection of exceptional words and phrases that shouldn't be matched. For example, if you have a size entity type with entry `giant`(an adjective), you might consider adding `giants`(a noun) as an exclusion. If the kind of entity type is `KIND_MAP`, then the phrases specified by entities and excluded phrases should be mutually exclusive.{{% /md %}}</dd><dt class="property-"
            title="">
        <span id="kind_nodejs">
<a href="#kind_nodejs" style="color: inherit; text-decoration: inherit;">kind</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}Indicates the kind of entity type.{{% /md %}}</dd><dt class="property-"
            title="">
        <span id="name_nodejs">
<a href="#name_nodejs" style="color: inherit; text-decoration: inherit;">name</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}The unique identifier of the entity type. Required for EntityTypes.UpdateEntityType. Format: `projects//locations//agents//entityTypes/`.{{% /md %}}</dd><dt class="property-"
            title="">
        <span id="redact_nodejs">
<a href="#redact_nodejs" style="color: inherit; text-decoration: inherit;">redact</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">boolean</span>
    </dt>
    <dd>{{% md %}}Indicates whether parameters of the entity type should be redacted in log. If redaction is enabled, page parameters and intent parameters referring to the entity type will be replaced by parameter name when logging.{{% /md %}}</dd></dl>
{{% /choosable %}}

{{% choosable language python %}}
<dl class="resources-properties"><dt class="property-"
            title="">
        <span id="auto_expansion_mode_python">
<a href="#auto_expansion_mode_python" style="color: inherit; text-decoration: inherit;">auto_<wbr>expansion_<wbr>mode</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">str</span>
    </dt>
    <dd>{{% md %}}Indicates whether the entity type can be automatically expanded.{{% /md %}}</dd><dt class="property-"
            title="">
        <span id="display_name_python">
<a href="#display_name_python" style="color: inherit; text-decoration: inherit;">display_<wbr>name</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">str</span>
    </dt>
    <dd>{{% md %}}The human-readable name of the entity type, unique within the agent.{{% /md %}}</dd><dt class="property-"
            title="">
        <span id="enable_fuzzy_extraction_python">
<a href="#enable_fuzzy_extraction_python" style="color: inherit; text-decoration: inherit;">enable_<wbr>fuzzy_<wbr>extraction</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">bool</span>
    </dt>
    <dd>{{% md %}}Enables fuzzy entity extraction during classification.{{% /md %}}</dd><dt class="property-"
            title="">
        <span id="entities_python">
<a href="#entities_python" style="color: inherit; text-decoration: inherit;">entities</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type"><a href="#googleclouddialogflowcxv3entitytypeentityresponse">Sequence[Google<wbr>Cloud<wbr>Dialogflow<wbr>Cx<wbr>V3Entity<wbr>Type<wbr>Entity<wbr>Response]</a></span>
    </dt>
    <dd>{{% md %}}The collection of entity entries associated with the entity type.{{% /md %}}</dd><dt class="property-"
            title="">
        <span id="excluded_phrases_python">
<a href="#excluded_phrases_python" style="color: inherit; text-decoration: inherit;">excluded_<wbr>phrases</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type"><a href="#googleclouddialogflowcxv3entitytypeexcludedphraseresponse">Sequence[Google<wbr>Cloud<wbr>Dialogflow<wbr>Cx<wbr>V3Entity<wbr>Type<wbr>Excluded<wbr>Phrase<wbr>Response]</a></span>
    </dt>
    <dd>{{% md %}}Collection of exceptional words and phrases that shouldn't be matched. For example, if you have a size entity type with entry `giant`(an adjective), you might consider adding `giants`(a noun) as an exclusion. If the kind of entity type is `KIND_MAP`, then the phrases specified by entities and excluded phrases should be mutually exclusive.{{% /md %}}</dd><dt class="property-"
            title="">
        <span id="kind_python">
<a href="#kind_python" style="color: inherit; text-decoration: inherit;">kind</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">str</span>
    </dt>
    <dd>{{% md %}}Indicates the kind of entity type.{{% /md %}}</dd><dt class="property-"
            title="">
        <span id="name_python">
<a href="#name_python" style="color: inherit; text-decoration: inherit;">name</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">str</span>
    </dt>
    <dd>{{% md %}}The unique identifier of the entity type. Required for EntityTypes.UpdateEntityType. Format: `projects//locations//agents//entityTypes/`.{{% /md %}}</dd><dt class="property-"
            title="">
        <span id="redact_python">
<a href="#redact_python" style="color: inherit; text-decoration: inherit;">redact</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">bool</span>
    </dt>
    <dd>{{% md %}}Indicates whether parameters of the entity type should be redacted in log. If redaction is enabled, page parameters and intent parameters referring to the entity type will be replaced by parameter name when logging.{{% /md %}}</dd></dl>
{{% /choosable %}}




## Supporting Types


<h4 id="googleclouddialogflowcxv3entitytypeentityresponse">Google<wbr>Cloud<wbr>Dialogflow<wbr>Cx<wbr>V3Entity<wbr>Type<wbr>Entity<wbr>Response</h4>



{{% choosable language csharp %}}
<dl class="resources-properties"><dt class="property-required"
            title="Required">
        <span id="synonyms_csharp">
<a href="#synonyms_csharp" style="color: inherit; text-decoration: inherit;">Synonyms</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">List&lt;string&gt;</span>
    </dt>
    <dd>{{% md %}}A collection of value synonyms. For example, if the entity type is *vegetable*, and `value` is *scallions*, a synonym could be *green onions*. For `KIND_LIST` entity types: * This collection must contain exactly one synonym equal to `value`.{{% /md %}}</dd><dt class="property-required"
            title="Required">
        <span id="value_csharp">
<a href="#value_csharp" style="color: inherit; text-decoration: inherit;">Value</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}The primary value associated with this entity entry. For example, if the entity type is *vegetable*, the value could be *scallions*. For `KIND_MAP` entity types: * A canonical value to be used in place of synonyms. For `KIND_LIST` entity types: * A string that can contain references to other entity types (with or without aliases).{{% /md %}}</dd></dl>
{{% /choosable %}}

{{% choosable language go %}}
<dl class="resources-properties"><dt class="property-required"
            title="Required">
        <span id="synonyms_go">
<a href="#synonyms_go" style="color: inherit; text-decoration: inherit;">Synonyms</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">[]string</span>
    </dt>
    <dd>{{% md %}}A collection of value synonyms. For example, if the entity type is *vegetable*, and `value` is *scallions*, a synonym could be *green onions*. For `KIND_LIST` entity types: * This collection must contain exactly one synonym equal to `value`.{{% /md %}}</dd><dt class="property-required"
            title="Required">
        <span id="value_go">
<a href="#value_go" style="color: inherit; text-decoration: inherit;">Value</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}The primary value associated with this entity entry. For example, if the entity type is *vegetable*, the value could be *scallions*. For `KIND_MAP` entity types: * A canonical value to be used in place of synonyms. For `KIND_LIST` entity types: * A string that can contain references to other entity types (with or without aliases).{{% /md %}}</dd></dl>
{{% /choosable %}}

{{% choosable language nodejs %}}
<dl class="resources-properties"><dt class="property-required"
            title="Required">
        <span id="synonyms_nodejs">
<a href="#synonyms_nodejs" style="color: inherit; text-decoration: inherit;">synonyms</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string[]</span>
    </dt>
    <dd>{{% md %}}A collection of value synonyms. For example, if the entity type is *vegetable*, and `value` is *scallions*, a synonym could be *green onions*. For `KIND_LIST` entity types: * This collection must contain exactly one synonym equal to `value`.{{% /md %}}</dd><dt class="property-required"
            title="Required">
        <span id="value_nodejs">
<a href="#value_nodejs" style="color: inherit; text-decoration: inherit;">value</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}The primary value associated with this entity entry. For example, if the entity type is *vegetable*, the value could be *scallions*. For `KIND_MAP` entity types: * A canonical value to be used in place of synonyms. For `KIND_LIST` entity types: * A string that can contain references to other entity types (with or without aliases).{{% /md %}}</dd></dl>
{{% /choosable %}}

{{% choosable language python %}}
<dl class="resources-properties"><dt class="property-required"
            title="Required">
        <span id="synonyms_python">
<a href="#synonyms_python" style="color: inherit; text-decoration: inherit;">synonyms</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">Sequence[str]</span>
    </dt>
    <dd>{{% md %}}A collection of value synonyms. For example, if the entity type is *vegetable*, and `value` is *scallions*, a synonym could be *green onions*. For `KIND_LIST` entity types: * This collection must contain exactly one synonym equal to `value`.{{% /md %}}</dd><dt class="property-required"
            title="Required">
        <span id="value_python">
<a href="#value_python" style="color: inherit; text-decoration: inherit;">value</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">str</span>
    </dt>
    <dd>{{% md %}}The primary value associated with this entity entry. For example, if the entity type is *vegetable*, the value could be *scallions*. For `KIND_MAP` entity types: * A canonical value to be used in place of synonyms. For `KIND_LIST` entity types: * A string that can contain references to other entity types (with or without aliases).{{% /md %}}</dd></dl>
{{% /choosable %}}

<h4 id="googleclouddialogflowcxv3entitytypeexcludedphraseresponse">Google<wbr>Cloud<wbr>Dialogflow<wbr>Cx<wbr>V3Entity<wbr>Type<wbr>Excluded<wbr>Phrase<wbr>Response</h4>



{{% choosable language csharp %}}
<dl class="resources-properties"><dt class="property-required"
            title="Required">
        <span id="value_csharp">
<a href="#value_csharp" style="color: inherit; text-decoration: inherit;">Value</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}The word or phrase to be excluded.{{% /md %}}</dd></dl>
{{% /choosable %}}

{{% choosable language go %}}
<dl class="resources-properties"><dt class="property-required"
            title="Required">
        <span id="value_go">
<a href="#value_go" style="color: inherit; text-decoration: inherit;">Value</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}The word or phrase to be excluded.{{% /md %}}</dd></dl>
{{% /choosable %}}

{{% choosable language nodejs %}}
<dl class="resources-properties"><dt class="property-required"
            title="Required">
        <span id="value_nodejs">
<a href="#value_nodejs" style="color: inherit; text-decoration: inherit;">value</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">string</span>
    </dt>
    <dd>{{% md %}}The word or phrase to be excluded.{{% /md %}}</dd></dl>
{{% /choosable %}}

{{% choosable language python %}}
<dl class="resources-properties"><dt class="property-required"
            title="Required">
        <span id="value_python">
<a href="#value_python" style="color: inherit; text-decoration: inherit;">value</a>
</span>
        <span class="property-indicator"></span>
        <span class="property-type">str</span>
    </dt>
    <dd>{{% md %}}The word or phrase to be excluded.{{% /md %}}</dd></dl>
{{% /choosable %}}





<h2 id="package-details">Package Details</h2>
<dl class="package-details">
	<dt>Repository</dt>
	<dd><a href="https://github.com/pulumi/pulumi-google-native">https://github.com/pulumi/pulumi-google-native</a></dd>
	<dt>License</dt>
	<dd>Apache-2.0</dd>
</dl>

